--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h2>Hello my name is Will Parker. This page has no function except for the links to my other pages and a quick description
         about me so here it is. Im 14 years old, I like coding, baseball, spending time with my family, hanging out with
         my friends and playing video games. I'm Asian and White. I'll be attending Saint Ignatius College Preparatory next
-        year. </h2>
+        year. Below you'll see a picture of "me"! </h2>
 </div>
 
 <style>
